--- a/p01.Rmd
+++ b/p01.Rmd
@@ -1,52 +1,95 @@
 ---
 title: "Portfolio 1"
+author: "Cynthia Deng"
+date: "01/31/2026"
 ---
 
-> The projects should be numbered consecutively (i.e., in the order in which you began them), and should include for each project a description of the goal, the product (computer program, hand graph, computer graph, etc.), the data, and some interpretation. Reports must be reproducible and of high quality in terms of writing, grammar, presentation, etc.
+### Goal 
+The goal of this project is to conduct a descriptive exploratory analysis of a working memory dataset examining performance under placebo and caffeine conditions. I focus on understanding how total working memory scores vary across drug condition, task type (digit vs. spatial span), and delay length.
+
+### Data
+The data come from a publicly available experimental study examining the effects of caffeine on working memory performance in healthy adults. Participants completed digit span and spatial span tasks under both placebo and caffeine conditions across multiple delay intervals (0, 4, 6, and 8 seconds).Total score represents an aggregate measure of overall task performance for each participant under each condition.
+https://plos.figshare.com/articles/dataset/Caffeine_working_memory_data_/23679244?file=41554906
+
+### Analysis
 
 ```{r load-packages, warning = FALSE, message=FALSE}
 library(tidyverse) 
 library(tidyr)
-data(fish_encounters)
+```
+```{r}
+caffeine <- read_csv("p01/data/caffeine.csv")
+```
+```{r}
+glimpse(caffeine)
+summary(caffeine)
+caffeine <- caffeine %>%
+  mutate(
+    id    = factor(id),
+    day   = factor(day),
+    drug  = factor(drug, levels = c("P", "D")),
+    span  = factor(span, levels = c("D", "S")),
+    delay = factor(delay)
+  )
+caffeine <- caffeine %>%
+  mutate(
+    drug = recode(drug, P = "Placebo", D = "Caffeine"),
+    span = recode(span, D = "Digit span", S = "Spatial span")
+  )
+
+
+```
+```{r}
+ggplot(caffeine, aes(x = total)) +
+  geom_histogram(bins = 20) +
+  labs(
+    title = "Distribution of total scores",
+    x = "Total score",
+    y = "Count"
+  )
+
 ```
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum eget nibh vel est aliquet iaculis at placerat sem. Aenean faucibus iaculis ultricies. Nullam consequat odio in ultricies ullamcorper. Etiam venenatis in est vitae ullamcorper. Nam vitae urna ut dolor rhoncus aliquet at vel neque. Quisque tristique leo finibus nisi interdum, sit amet tempor risus viverra. Donec mollis vulputate sodales. Nunc ornare, leo quis euismod eleifend, eros mi maximus felis, vel varius lacus dui eget nibh. Duis vitae nunc nisl. Donec accumsan aliquam elit, eu fringilla quam pulvinar eget.
-
-Mauris in ligula mauris. Curabitur facilisis pharetra metus eget lobortis. In egestas nibh sit amet faucibus eleifend. Suspendisse imperdiet viverra blandit. Phasellus consectetur tincidunt eros eu facilisis. Quisque maximus, orci eget sodales aliquam, velit lorem semper dolor, nec convallis erat ipsum mattis velit. Pellentesque porttitor, mauris vitae aliquam mattis, metus nisl viverra turpis, vel convallis metus sapien et ex. Nunc consequat ipsum id dolor eleifend, sit amet semper eros sodales. Pellentesque consectetur, dui quis venenatis malesuada, nunc lorem lacinia libero, vitae malesuada dui arcu in augue. Aliquam id sagittis libero. Vestibulum aliquet sagittis libero, non posuere odio molestie ut. Curabitur lacus enim, viverra vel odio non, pretium efficitur elit. Mauris posuere efficitur interdum. Nunc sed bibendum turpis, quis fringilla velit. Phasellus eu lorem lobortis eros molestie laoreet.
-
-
+The distribution of total scores is roughly unimodal, with most scores falling in a middle range and fewer observations at the low and high ends. This suggests the outcome is not extremely skewed.
 
 ```{r}
-# Create a barplot of the number of fish encounters by species
-ggplot(data = fish_encounters, aes(x = station, y = seen)) +
-  geom_bar(stat = "identity") +
-  labs(x = "Species", y = "Number of Fish Encounters")
-  
+ggplot(caffeine, aes(x = total)) +
+  geom_histogram(bins = 20) +
+  facet_wrap(~ drug) +
+  labs(
+    title = "Distribution of total scores by drug condition",
+    x = "Total score",
+    y = "Count"
+  )
+
 ```
 
-
-Sed mollis purus faucibus leo finibus, ut pharetra nibh elementum. Nulla id orci lorem. Mauris sollicitudin mi eget tellus vehicula, ut convallis lorem mollis. In blandit nulla diam, a malesuada sem volutpat interdum. Ut elementum elit at velit maximus, ac tempor odio porttitor. Suspendisse lobortis sollicitudin tortor, ut pharetra libero luctus a. Sed hendrerit faucibus metus. Sed rutrum purus vel pellentesque euismod.
-
+When I split the histogram by drug condition, the placebo and caffeine distributions overlap substantially. Neither condition shows a completely different shape, which suggests any drug-related differences are likely modest.
 
 ```{r}
-# Create a barplot of the number of fish encounters by species
-ggplot(data = fish_encounters, aes(x = station, y = seen)) +
-  geom_bar(stat = "identity") +
-  labs(x = "Species", y = "Number of Fish Encounters") +
-  theme_minimal()
-  
+ggplot(caffeine, aes(x = drug, y = total)) +
+  geom_boxplot(width = 0.12, outlier.alpha = 0.4) +
+  facet_wrap(~ span) +
+  labs(
+    title = "Total scores by drug condition and task type",
+    x = "Condition",
+    y = "Total score"
+  )
+
 ```
 
-Mauris placerat in velit a pharetra. Nulla viverra bibendum lectus, ut lobortis nibh. Aenean malesuada, orci vitae dictum placerat, enim justo aliquet leo, ac tincidunt augue ipsum et mi. Nullam in pharetra metus, nec molestie felis. Duis varius rhoncus pulvinar. Integer semper urna sed tellus rhoncus, vel suscipit odio iaculis. Mauris iaculis neque pellentesque ex convallis venenatis. Sed ultrices euismod fermentum. Ut feugiat risus at turpis tincidunt viverra.
-
+Across both drug conditions, total scores are higher for the digit span task than for the spatial span task, indicating better overall performance on digit span. Within the digit span task, caffeine shows a slightly higher median total score than placebo, although the interquartile ranges overlap substantially. For the spatial span task, median scores under caffeine appear slightly lower than placebo, with greater variability and several low-score outliers in the caffeine condition.
 
 ```{r}
-# Create a barplot of the number of fish encounters by species
-ggplot(data = fish_encounters, aes(x = station, y = seen)) +
-  geom_bar(stat = "identity") +
-  labs(x = "Species", y = "Number of Fish Encounters") +
-  theme_classic()
-  
+ggplot(caffeine, aes(x = drug, y = total)) +
+  geom_boxplot() +
+  facet_grid(span ~ delay) +
+  labs(
+    title = "Total scores by drug condition across task type and delay",
+    x = "Condition",
+    y = "Total score"
+  )
+
 ```
 
-Donec sagittis suscipit orci in ultrices. Vivamus iaculis eleifend est et dictum. Fusce non urna at lacus dapibus tincidunt ac sed nibh. Donec luctus lectus elit, ac ultrices tortor mollis sit amet. Nulla finibus lacinia arcu. Proin sollicitudin non odio et pulvinar. Maecenas finibus faucibus finibus. Ut elementum metus velit, a sodales sapien commodo et. Vivamus pulvinar, sapien et porta cursus, elit est luctus nisi, eget fringilla odio diam et enim. Sed sodales suscipit bibendum. Morbi ut metus semper, laoreet felis sodales, consequat dolor.
+Across both digit and spatial span tasks, total scores show a general decline as delay length increases, with lower performance at longer delays. This decline is modest for the digit span task but more pronounced for the spatial span task, where median scores are consistently lower and variability is somewhat greater. Within most delay conditions, the placebo and caffeine distributions overlap substantially, with only small differences in median performance. In the digit span task, caffeine shows slightly higher medians at some delays, whereas in the spatial span task caffeine tends to show similar medians compared to placebo.
